current working Accompany site

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,35 @@
-<div>
-    <h1> This is the about page</h1>
+
+<div class="container">
+    <div class="row">
+        <div class="jumbotron">
+            <div class="container">
+
+                <h1> About Accompany</h1>
+                <h3> This is where we describe the company. We can go as far as giving it a history and challenges faced over
+                the years etc. etc. You could go wild.</h3>
+
+
+
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-4">
+            <h3> Our Pride</h3>
+
+            <p>We pride ourselves in being a hands-on company when it comes to software development. Ensuring that you,
+                the client, are always satisfied.</p>
+        </div>
+        <div class="col-lg-4">
+            <h3> Our Reason</h3>
+
+            <p> We are bona fide geeks who have a passion for all that is Software Dev. We believe in enjoying what you do
+                and strive to do just that every single day at "work"</p>
+        </div>
+        <div class="col-lg-4">
+            <h3> Our Goal</h3>
+            <p> Put simply, we want to impact the community positively when it comes to Code and improve the footprint that
+                this community has in the world. If we could have it our way, everyone on earth would be developers.</p>
+        </div>
+    </div>
 </div>
