--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,12 +1,11 @@
 
-
 <div class="container">
     <div class="row">
         <div class="jumbotron">
             <div class="container">
 
-                <h1> Welcome to Accompany</h1>
-                <h3> Where all your company questions will be answered.</h3>
+                <h1> Services Accompany Provides</h1>
+                <h3> The different services will be described on this page and all the prices and listings etc.</h3>
 
 
 
@@ -17,19 +16,19 @@
         <div class="col-lg-4">
             <h3> Our Pride</h3>
 
-           <p>We pride ourselves in being a hands-on company when it comes to software development. Ensuring that you,
-            the client, are always satisfied.</p>
+            <p>We pride ourselves in being a hands-on company when it comes to software development. Ensuring that you,
+                the client, are always satisfied.</p>
         </div>
         <div class="col-lg-4">
             <h3> Our Reason</h3>
 
             <p> We are bona fide geeks who have a passion for all that is Software Dev. We believe in enjoying what you do
-            and strive to do just that every single day at "work"</p>
+                and strive to do just that every single day at "work"</p>
         </div>
         <div class="col-lg-4">
             <h3> Our Goal</h3>
             <p> Put simply, we want to impact the community positively when it comes to Code and improve the footprint that
-            this community has in the world. If we could have it our way, everyone on earth would be developers.</p>
+                this community has in the world. If we could have it our way, everyone on earth would be developers.</p>
         </div>
     </div>
 </div>
