--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,10 +19,10 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li><a routerLink="/about" routerLinkActive="active">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a routerLink="/services">Services</a></li>
+                <li><a routerLink="/products">Products</a></li>
+                <li><a routerLink="/contact">Contact Us</a></li>
+                <li><a routerLink="/blog">Blog</a></li>
             </ul>
 
         </div><!-- /.navbar-collapse -->
